--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["flow", ["env", {
     "targets": {
-      "browsers": [">1%", "last 4 versions", "Firefox ESR", "not ie < 9"]
+      "node": "7.6.0"
     }
   }]],
   "plugins": ["transform-react-jsx", "transform-class-properties"]
